--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 python-dotenv==1.0.0
 pydantic==2.4.2
 sqlalchemy==2.0.23
-python-jose==3.3.0
-passlib==1.7.4
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 alembic==1.12.1
 requests==2.31.0
 python-dateutil==2.8.2
+httpx==0.25.0
