--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ uvicorn[standard]==0.24.0
 python-dotenv==1.0.0
 pydantic==2.4.2
 sqlalchemy==2.0.23
-python-jose[cryptography]==3.3.0
+python-jose==3.3.0  # Removed [cryptography] as it's causing issues
+cryptography==41.0.7  # Explicitly add cryptography with version
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 alembic==1.12.1
