--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,8 +2,10 @@ services:
   - type: web
     name: smart-study-planner
     env: python
+    region: singapore  # Choose a region closest to you
+    plan: free
     buildCommand: chmod +x ./build.sh && ./build.sh
-    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT --workers 1
+    startCommand: ./start.sh
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
